# AltRouteSim

./: .gitignore  CMakeLists.txt  README.md  run_simulation.sh
data/: edges.csv  nodes.csv
ml/: inference_wrapper.py  model.pkl  predict.py  pybind_wrapper.cpp  train_model.py
scripts/: osm_to_csv.py
src/: Graph.cpp  Graph.hpp  MLPredictor.cpp  MLPredictor.hpp  Render.cpp  Render.hpp  Simulator.cpp  Simulator.hpp  Vehicle.hpp  main.cpp
